gst-libs/gst/vaapi/gstvaapidecoder.h
@@ -135,6 +135,9 @@ gst_vaapi_decoder_flush (GstVaapiDecoder * decoder);
 GstVaapiDecoderStatus
 gst_vaapi_decoder_check_status (GstVaapiDecoder * decoder);
 
+gboolean
+gst_vaapi_decoder_update_caps (GstVaapiDecoder * decoder, GstCaps * caps);
+
 G_END_DECLS
 
 #endif /* GST_VAAPI_DECODER_H */
